can send message

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "removeComments": true,
     "outDir": "dist",
     "target": "ES2022",
-    "sourceMap": true
+    "sourceMap": true,
+    "esModuleInterop": true,
   }
 }
