--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@tongzcomradez/buka-smsx",
-  "version": "1.0.0",
+  "name": "@tongzcomradez/buka-sms",
+  "version": "1.0.3",
   "description": "",
   "main": "src/index.ts",
   "scripts": {
@@ -18,12 +18,39 @@
     "registry": "https://npm.pkg.github.com"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "dotenv": "^16.1.4",
     "md5": "^2.3.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.0",
     "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": ".",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "./coverage",
+    "testEnvironment": "node",
+    "roots": [
+      "<rootDir>/src/"
+    ],
+    "moduleNameMapper": {
+      "^@app/logger(|/.*)$": "<rootDir>/libs/logger/src/$1"
+    }
   }
 }
