--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@tongzcomradez/buka-sms",
-  "version": "1.0.3",
+  "name": "@tongzcomrade/buka-sms",
+  "version": "1.0.4",
   "description": "",
   "main": "src/index.ts",
   "scripts": {
@@ -13,9 +13,6 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tongzcomradez/buka-sms.git"
-  },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
   },
   "dependencies": {
     "axios": "^1.4.0",
